# musicbot-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
src/: commands.rs  config.rs  deadlock_detection.rs  events.rs  main.rs  playlist_info.rs  queue.rs  serenity_query.rs  trimmed_embed.rs  typekeys.rs
src/tracing_webhook/: layer.rs  mod.rs  visitor.rs
