[package]
name = "music_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
console-subscriber = { version = "0.4.0", optional = true }

reqwest = "0.12"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
tracing-appender = "0.2"

serde = { version = "1.0" }
toml = "0.8"
serde_json = "1.0"

serenity = { version = "0.12", features = ["client", "standard_framework", "voice", "model"] }
poise = { version = "0.6" }
songbird = { path = "vendor/songbird", features = ["builtin-queue"] }
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4", "alac"] }

[features]
default = []
tokio_console = ["dep:console-subscriber"]
